feat(IoC): Cache beanClass to BeanDefinition